--- a/project.config
+++ b/project.config
@@ -3,15 +3,24 @@
 [access]
 	inheritFrom = All-Projects
 [access "refs/*"]
-	owner = group user/Chris Tessmer (op-ct)
+	owner = group SIMP Admins
+	owner = group user/simp-auto
 [access "refs/for/refs/*"]
-	read = group user/Chris Tessmer (op-ct)
-	push = group user/Chris Tessmer (op-ct)
-	label-Code-Review = -2..+2 group user/Chris Tessmer (op-ct)
-	label-Verified = -1..+1 group user/Chris Tessmer (op-ct)
-	rebase = group user/Chris Tessmer (op-ct)
-	removeReviewer = group user/Chris Tessmer (op-ct)
-	submit = group user/Chris Tessmer (op-ct)
+	read = group SIMP Developers
+	read = group SIMP Reviewers
+	read = group user/simp-auto
+	label-Code-Review = -2..+2 group SIMP Developers
+	label-Code-Review = -1..+1 group SIMP Reviewers
+	label-Verified = -1..+1 group SIMP Developers
+	label-Verified = -1..+1 group SIMP Reviewers
+	rebase = group SIMP Developers
+	removeReviewer = group SIMP Developers
+	submit = group SIMP Developers
+	abandon = group SIMP Developers
+	create = group user/simp-auto
+	pushMerge = group user/simp-auto
+	editTopicName = group SIMP Developers
+	editTopicName = group SIMP Reviewers
 [access "refs/heads/*"]
 	read = group user/Chris Tessmer (op-ct)
 	create = group user/Chris Tessmer (op-ct)
