Modify access rules

--- a/project.config
+++ b/project.config
@@ -3,6 +3,7 @@
 [access]
 	inheritFrom = All-Projects
 [access "refs/*"]
+	owner = group SIMP Admins
 	owner = group user/Chris Tessmer (op-ct)
 [access "refs/for/refs/*"]
 	read = group user/Chris Tessmer (op-ct)
