--- a/project.config
+++ b/project.config
@@ -4,10 +4,11 @@
 	inheritFrom = All-Projects
 [access "refs/*"]
 	owner = group SIMP Admins
-	owner = group user/Chris Tessmer (op-ct)
 [access "refs/for/refs/*"]
-	read = group user/Chris Tessmer (op-ct)
-	push = group user/Chris Tessmer (op-ct)
+	read = group SIMP Developers
+	read = group user/simp-auto
+	push = group SIMP Developers
+	push = group user/simp-auto
 	label-Code-Review = -2..+2 group user/Chris Tessmer (op-ct)
 	label-Verified = -1..+1 group user/Chris Tessmer (op-ct)
 	rebase = group user/Chris Tessmer (op-ct)
