Modify access rules

--- a/project.config
+++ b/project.config
@@ -14,6 +14,7 @@
 	rebase = group user/Chris Tessmer (op-ct)
 	removeReviewer = group user/Chris Tessmer (op-ct)
 	submit = group user/Chris Tessmer (op-ct)
+	pushMerge = group SIMP Developers
 [access "refs/heads/*"]
 	read = group user/Chris Tessmer (op-ct)
 	create = group user/Chris Tessmer (op-ct)
