--- a/project.config
+++ b/project.config
@@ -9,17 +9,13 @@
 	read = group user/simp-auto
 	push = group SIMP Developers
 	push = group user/simp-auto
-	label-Code-Review = -2..+2 group user/Chris Tessmer (op-ct)
-	label-Verified = -1..+1 group user/Chris Tessmer (op-ct)
-	rebase = group user/Chris Tessmer (op-ct)
-	removeReviewer = group user/Chris Tessmer (op-ct)
-	submit = group user/Chris Tessmer (op-ct)
 	pushMerge = group SIMP Developers
 [access "refs/heads/*"]
-	read = group user/Chris Tessmer (op-ct)
+	read = group user/simp-auto
 	create = group user/Chris Tessmer (op-ct)
 	push = +force group user/Chris Tessmer (op-ct)
 	pushMerge = group user/Chris Tessmer (op-ct)
+	abandon = group SIMP Developers
 [access "refs/tags/*"]
 	push = +force group user/Chris Tessmer (op-ct)
 	pushTag = group user/Chris Tessmer (op-ct)
