Modify access rules

--- a/project.config
+++ b/project.config
@@ -12,9 +12,9 @@
 	pushMerge = group SIMP Developers
 [access "refs/heads/*"]
 	read = group user/simp-auto
-	create = group user/Chris Tessmer (op-ct)
-	push = +force group user/Chris Tessmer (op-ct)
-	pushMerge = group user/Chris Tessmer (op-ct)
+	create = group user/simp-auto
+	push = group user/simp-auto
+	pushMerge = group user/simp-auto
 	abandon = group SIMP Developers
 [access "refs/tags/*"]
 	push = +force group user/Chris Tessmer (op-ct)
