--- a/project.config
+++ b/project.config
@@ -16,6 +16,10 @@
 	push = group user/simp-auto
 	pushMerge = group user/simp-auto
 	abandon = group SIMP Developers
+	label-Code-Review = -2..+2 group SIMP Developers
+	label-Code-Review = -1..+1 group SIMP Reviewers
+	label-Verified = -1..+1 group SIMP Developers
+	label-Verified = -1..+1 group SIMP Reviewers
 [access "refs/tags/*"]
 	push = +force group user/Chris Tessmer (op-ct)
 	pushTag = group user/Chris Tessmer (op-ct)
