--- a/project.config
+++ b/project.config
@@ -20,6 +20,10 @@
 	label-Code-Review = -1..+1 group SIMP Reviewers
 	label-Verified = -1..+1 group SIMP Developers
 	label-Verified = -1..+1 group SIMP Reviewers
+	rebase = group SIMP Developers
+	removeReviewer = group SIMP Developers
+	submit = group SIMP Developers
+	editTopicName = group SIMP Developers
 [access "refs/tags/*"]
 	push = +force group user/Chris Tessmer (op-ct)
 	pushTag = group user/Chris Tessmer (op-ct)
