--- a/project.config
+++ b/project.config
@@ -13,7 +13,7 @@
 [access "refs/heads/*"]
 	read = group user/simp-auto
 	create = group user/simp-auto
-	push = group user/simp-auto
+	push = +force group user/simp-auto
 	pushMerge = group user/simp-auto
 	abandon = group SIMP Developers
 	label-Code-Review = -2..+2 group SIMP Developers
@@ -25,6 +25,11 @@
 	submit = group SIMP Developers
 	editTopicName = group SIMP Developers
 [access "refs/tags/*"]
-	push = +force group user/Chris Tessmer (op-ct)
-	pushTag = group user/Chris Tessmer (op-ct)
-	pushSignedTag = group user/Chris Tessmer (op-ct)
+	push = group SIMP Developers
+	push = group user/simp-auto
+	pushTag = group SIMP Developers
+	pushTag = group user/simp-auto
+	pushSignedTag = group SIMP Developers
+	pushSignedTag = group user/simp-auto
+	create = group SIMP Developers
+	create = group user/simp-auto
