Modify access rules

--- a/project.config
+++ b/project.config
@@ -4,6 +4,7 @@
 	inheritFrom = All-Projects
 [access "refs/*"]
 	owner = group SIMP Admins
+	owner = group user/simp-auto
 [access "refs/for/refs/*"]
 	read = group SIMP Developers
 	read = group user/simp-auto
