--- a/project.config
+++ b/project.config
@@ -27,7 +27,7 @@
 	editTopicName = group SIMP Developers
 [access "refs/tags/*"]
 	push = group SIMP Developers
-	push = group user/simp-auto
+	push = +force group user/simp-auto
 	pushTag = group SIMP Developers
 	pushTag = group user/simp-auto
 	pushSignedTag = group SIMP Developers
