--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,7 +1,7 @@
 fixtures:
   repositories:
     'stdlib':
-      repo: 'git://github.com/puppetlabs/puppetlabs-stdlib.git'
-      ref: '4.11.0'
+      repo: "https://github.com/simp/puppetlabs-stdlib"
+      branch: 'simp-master'
   symlinks:
     'haveged': "#{source_dir}"
