--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,7 +1,8 @@
+---
 fixtures:
   repositories:
-    'stdlib':
-      repo: "https://github.com/simp/puppetlabs-stdlib"
-      branch: 'simp-master'
+    stdlib:
+      branch: 5.X
+      repo: https://github.com/simp/puppetlabs-stdlib
   symlinks:
-    'haveged': "#{source_dir}"
+    haveged: "#{source_dir}"
