--- a/spec/acceptance/nodesets/default.yml
+++ b/spec/acceptance/nodesets/default.yml
@@ -5,7 +5,7 @@ HOSTS:
       - default
       - master
     platform:   el-7-x86_64
-    box:        puppetlabs/centos-7.0-64-nocm
+    box:        centos/7
     box_url:    https://vagrantcloud.com/puppetlabs/boxes/centos-7.0-64-nocm
     hypervisor: vagrant
     yum_repos:
@@ -18,7 +18,7 @@ HOSTS:
     roles:
       - client
     platform:   el-6-x86_64
-    box:        puppetlabs/centos-6.6-64-nocm
+    box:        centos/6
     box_url:    https://vagrantcloud.com/puppetlabs/boxes/centos-6.6-64-nocm
     hypervisor: vagrant
     yum_repos:
@@ -29,6 +29,6 @@ HOSTS:
 
 CONFIG:
   log_level: verbose
-  type:      foss
+  type:      aio
   vagrant_memsize: 256
   # vb_gui: true
