(SIMP-4009) Add support for OEL and Puppet5
* Added tests for Puppet 5
* Added support for OEL 6 and 7

SIMP-4009 #comment Added support for Puppet 5 and OEL 6 & 7

--- a/spec/acceptance/nodesets/oel.yml
+++ b/spec/acceptance/nodesets/oel.yml
@@ -1,11 +1,11 @@
 HOSTS:
-  el7-system:
+  oel7:
     roles:
       - server
       - default
       - master
     platform:   el-7-x86_64
-    box:        centos/7
+    box:        elastic/oel-7-x86_64
     hypervisor: vagrant
     yum_repos:
       epel:
@@ -13,11 +13,11 @@ HOSTS:
         gpgkeys:
           - https://getfedora.org/static/352C64E5.txt
 
-  el6-system:
+  oel6:
     roles:
       - client
     platform:   el-6-x86_64
-    box:        centos/6
+    box:        elastic/oel-6-x86_64
     hypervisor: vagrant
     yum_repos:
       epel:
