(SIMP-6229) Update upper bound stdlib < 6.0.0
- Update the upper bound of stdlib to < 6.0.0

SIMP-6229 #comment pupmod-simp-haveged

--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,11 +1,7 @@
 ---
 fixtures:
   repositories:
-    stdlib:
-      repo: https://github.com/simp/puppetlabs-stdlib
-      branch: master
-    simplib:
-      repo: https://github.com/simp/pupmod-simp-simplib
-      branch: master
+    stdlib: https://github.com/simp/puppetlabs-stdlib
+    simplib: https://github.com/simp/pupmod-simp-simplib
   symlinks:
     haveged: "#{source_dir}"
