--- a/spec/acceptance/nodesets/default.yml
+++ b/spec/acceptance/nodesets/default.yml
@@ -16,7 +16,7 @@ HOSTS:
     hypervisor: <%= hypervisor %>
     yum_repos:
       epel:
-        url: 'http://download.fedoraproject.org/pub/epel/7/$basearch'
+        mirrorlist: 'https://mirrors.fedoraproject.org/metalink?repo=epel-7&arch=$basearch'
         gpgkeys:
           - https://dl.fedoraproject.org/pub/epel/RPM-GPG-KEY-EPEL-$releasever
 
@@ -28,7 +28,7 @@ HOSTS:
     hypervisor: <%= hypervisor %>
     yum_repos:
       epel:
-        url: 'http://download.fedoraproject.org/pub/epel/6/$basearch'
+        mirrorlist: 'https://mirrors.fedoraproject.org/metalink?repo=epel-6&arch=$basearch'
         gpgkeys:
           - https://dl.fedoraproject.org/pub/epel/RPM-GPG-KEY-EPEL-$releasever
 
