--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -3,5 +3,6 @@ fixtures:
   repositories:
     stdlib: https://github.com/simp/puppetlabs-stdlib
     simplib: https://github.com/simp/pupmod-simp-simplib
+    systemd: https://github.com/simp/puppet-systemd
   symlinks:
     haveged: "#{source_dir}"
