Support Amazon Linux 2 (#65)
- Added:
  - The module now supports Amazon Linux 2
- Changed:
  - Added a `.rubocop.yml`
  - Rubocop'd the Ruby

Closes #64

Co-authored-by: op-ct <chris.tessmer@onyxpoint.com>

--- a/spec/acceptance/nodesets/amzn2.yml
+++ b/spec/acceptance/nodesets/amzn2.yml
@@ -7,16 +7,9 @@
 -%>
 
 HOSTS:
-  el7:
-    roles:
-      - default
+  amzn2:
     platform:   el-7-x86_64
-    box:        centos/7
-    hypervisor: <%= hypervisor %>
-
-  el8:
-    platform:   el-8-x86_64
-    box:        centos/stream8
+    box:        gbailey/amzn2
     hypervisor: <%= hypervisor %>
 
 CONFIG:
